feat: 메인 페이지 기본 레이아웃 CSS

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ColaCola</title>
-    <link rel="stylesheet" href="src/style/reset.css">
-    <link rel="stylesheet" href="src/style/style.css">
+    <link rel="stylesheet" href="style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500;700&display=swap" rel="stylesheet">
@@ -28,6 +27,35 @@
                         <span class="txt-item-price">1000원</span>
                     </button>
                 </li>
+                <li>
+                    <button type="button" class="btn-item">
+                        <img src="img/Original_Cola.png" alt="오리지널 콜라입니다." class="img-item">
+                        <strong class="txt-item-name">Original_Cola</strong>
+                        <span class="txt-item-price">1000원</span>
+                    </button>
+                </li>
+                <li>
+                    <button type="button" class="btn-item">
+                        <img src="img/Original_Cola.png" alt="오리지널 콜라입니다." class="img-item">
+                        <strong class="txt-item-name">Original_Cola</strong>
+                        <span class="txt-item-price">1000원</span>
+                    </button>
+                </li>
+                <li>
+                    <button type="button" class="btn-item">
+                        <img src="img/Original_Cola.png" alt="오리지널 콜라입니다." class="img-item">
+                        <strong class="txt-item-name">Original_Cola</strong>
+                        <span class="txt-item-price">1000원</span>
+                    </button>
+                </li>
+                <li>
+                    <button type="button" class="btn-item">
+                        <img src="img/Original_Cola.png" alt="오리지널 콜라입니다." class="img-item">
+                        <strong class="txt-item-name">Original_Cola</strong>
+                        <span class="txt-item-price">1000원</span>
+                    </button>
+                </li>
+
             </ul>
 
             <section class="cont-buy">
@@ -42,6 +70,20 @@
                 <button type="button" class="btn-insert">입금</button>
 
                 <ul class="list-item-staged">
+                    <li>
+                        <button type="button" class="btn-staged">
+                            <img src="img/Cool_Cola.png" alt="" class="img-item">
+                            <strong class="txt-item">Cool_Cola</strong>
+                            <span class="num-counter">1</span>
+                        </button>
+                    </li>
+                    <li>
+                        <button type="button" class="btn-staged">
+                            <img src="img/Cool_Cola.png" alt="" class="img-item">
+                            <strong class="txt-item">Cool_Cola</strong>
+                            <span class="num-counter">1</span>
+                        </button>
+                    </li>
                     <li>
                         <button type="button" class="btn-staged">
                             <img src="img/Cool_Cola.png" alt="" class="img-item">
@@ -65,6 +107,16 @@
             <div class="cont-myitem">
                 <strong class="tit-myitem">획득한 음료</strong>
                 <ul class="list-item-staged">
+                    <li>
+                        <img src="img/Cool_Cola.png" alt="" class="img-item">
+                        <strong class="txt-item">Cool_Cola</strong>
+                        <span class="num-counter">1</span>
+                    </li>
+                    <li>
+                        <img src="img/Cool_Cola.png" alt="" class="img-item">
+                        <strong class="txt-item">Cool_Cola</strong>
+                        <span class="num-counter">1</span>
+                    </li>
                     <li>
                         <img src="img/Cool_Cola.png" alt="" class="img-item">
                         <strong class="txt-item">Cool_Cola</strong>
