feat: leftside CSS detail

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <h3 class="ir">구입 관련 정보</h3>
                 <div class="info-balance">
                     잔액 :
-                    <span class="txt-balance">원</span>
+                    <span class="txt-balance">3000 원</span>
                 </div>
                 <button type="button" class="btn-return">거스름돈 반환</button>
                 <label for="inpInsert" class="ir">입금할 금액을 입력합니다.</label>
