feat: 자판기에 콜라 배치 구현

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="vending-machine">
             <h2 class="ir">자판기 화면</h2>
             <ul class="list-item">
-                <li>
+                <!-- <li>
                     <button type="button" class="btn-item">
                         <img src="img/Original_Cola.png" alt="오리지널 콜라입니다." class="img-item">
                         <strong class="txt-item-name">Original_Cola</strong>
@@ -54,7 +54,7 @@
                         <strong class="txt-item-name">Original_Cola</strong>
                         <span class="txt-item-price">1000원</span>
                     </button>
-                </li>
+                </li> -->
 
             </ul>
 
@@ -127,7 +127,7 @@
             </div>
         </section>
     </article>
-    <script type="module" src="js/index.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
