feat: 상품 품절 표시 CSS 스타일 추가

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <section class="vending-machine">
             <h2 class="ir">자판기 화면</h2>
             <ul class="list-item">
-                <!-- <li>
-                    <button type="button" class="btn-item">
+                <li>
+                    <button type="button" class="btn-item sold-out">
                         <img src="img/Original_Cola.png" alt="오리지널 콜라입니다." class="img-item">
                         <strong class="txt-item-name">Original_Cola</strong>
                         <span class="txt-item-price">1000원</span>
                     </button>
-                </li> -->
+                </li>
             </ul>
 
             <section class="cont-buy">
