feat: 음료 선택과 획득 기능 구현

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         </h1>
         <section class="vending-machine">
             <h2 class="ir">자판기 화면</h2>
-            <ul class="list-item">
-                <li>
+            <ul class="list-item" id="displayedItemList">
+                <!-- <li>
                     <button type="button" class="btn-item sold-out">
                         <img src="img/Original_Cola.png" alt="오리지널 콜라입니다." class="img-item">
                         <strong class="txt-item-name">Original_Cola</strong>
                         <span class="txt-item-price">1000원</span>
                     </button>
-                </li>
+                </li> -->
             </ul>
 
             <section class="cont-buy">
@@ -41,20 +41,6 @@
                 <button type="button" class="btn-insert">입금</button>
 
                 <ul class="list-item-staged">
-                    <li>
-                        <button type="button" class="btn-staged">
-                            <img src="img/Cool_Cola.png" alt="" class="img-item">
-                            <strong class="txt-item">Cool_Cola</strong>
-                            <span class="num-counter">1</span>
-                        </button>
-                    </li>
-                    <li>
-                        <button type="button" class="btn-staged">
-                            <img src="img/Cool_Cola.png" alt="" class="img-item">
-                            <strong class="txt-item">Cool_Cola</strong>
-                            <span class="num-counter">1</span>
-                        </button>
-                    </li>
                     <!-- <li>
                         <button type="button" class="btn-staged">
                             <img src="img/Cool_Cola.png" alt="" class="img-item">
@@ -78,27 +64,17 @@
             <div class="cont-myitem">
                 <strong class="tit-myitem">획득한 음료</strong>
                 <ul class="list-item-staged">
-                    <li>
+                    <!-- <li>
                         <img src="img/Cool_Cola.png" alt="" class="img-item">
                         <strong class="txt-item">Cool_Cola</strong>
                         <span class="num-counter">1</span>
-                    </li>
-                    <li>
-                        <img src="img/Cool_Cola.png" alt="" class="img-item">
-                        <strong class="txt-item">Cool_Cola</strong>
-                        <span class="num-counter">1</span>
-                    </li>
-                    <li>
-                        <img src="img/Cool_Cola.png" alt="" class="img-item">
-                        <strong class="txt-item">Cool_Cola</strong>
-                        <span class="num-counter">1</span>
-                    </li>
+                    </li> -->
                 </ul>
                 <strong class="txt-money-spent">총 금액: 0 원</strong>
             </div>
         </section>
     </article>
-    <script src="./js/app.js"></script>
+    <script type="module" src="./js/app.js"></script>
 </body>
 
 </html>
